[package]
name = "swc4j"
version = "2.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
log = "0.4.28"
env_logger = "0.11.8"
deno_ast = { version = "0.51.0", features = [
  "bundler",
  "cjs",
  "codegen",
  "compat",
  "concurrent",
  "emit",
  "proposal",
  "react",
  "scopes",
  "sourcemap",
  "transforms",
  "transpiling",
  "typescript",
  "utils",
  "view",
  "visit",
] }
jni = "0.21.1"
num-bigint = "0.4.6"
anyhow = "1.0.100"
